--- a/.github/workflows/create-cache.yaml
+++ b/.github/workflows/create-cache.yaml
@@ -8,7 +8,7 @@ on:
       - opened
 
 jobs:
-  cleanup:
+  cache-file:
     runs-on: ubuntu-latest
     steps:
       - name: Touch file
@@ -17,7 +17,7 @@ jobs:
       - name: Save file
         uses: actions/cache/save@v3
         env:
-          cache-name: pr-
+          cache-name: pr-${{ github.event.number }}
         with:
           path: /tmp/*.txt 
           key: ${{ env.cache-name }}
